--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-slick": "^0.29.0",
         "react-social-icons": "^5.15.0",
         "slick-carousel": "^1.8.1",
+        "uuid": "^7.0.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
